--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
             android:name=".JobListActivity"
             android:label="@string/app_name"
             android:background="@color/white"
-            android:launchMode="singleTop"
-            android:parentActivityName=".MainActivity" >
+            android:launchMode="singleTop">
+            <!--android:parentActivityName=".MainActivity" >-->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
