--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,7 +1,9 @@
 #This is a java properties file for the config details
 
-env = local
+env = stage
 
-stage.domain = http://ec2-52-74-141-170.ap-southeast-1.compute.amazonaws.com:8080
+stage_mini.domain = http://ec2-52-74-141-170.ap-southeast-1.compute.amazonaws.com:8080
 
 local.domain = http://10.0.2.2:8080
+
+stage.domain = http://ec2-52-27-193-93.us-west-2.compute.amazonaws.com:8080/gs-rest-service-0.1.0
