--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
