--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'joda-time:joda-time:2.8.1'
 }
