Updating font colours:
1. Changed font colors to black
   a) tab text
   b) job fragment

--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,8 +1,8 @@
 #This is a java properties file for the config details
 
-env = local
+env = stage_mini
 
-stage_mini.domain = http://ec2-52-74-141-170.ap-southeast-1.compute.amazonaws.com:8080
+stage_mini.domain = http://ec2-52-74-141-170.ap-southeast-1.compute.amazonaws.com:8080/gs-rest-service-0.1.0
 
 local.domain = http://10.0.2.2:8080
 
