--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/omelee_logo"
+        android:icon="@drawable/omelee_logo_12"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity"
