--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
