--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.4.5'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.5'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.5'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.5'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'joda-time:joda-time:2.8.1'
 }
