--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,6 +1,6 @@
 #This is a java properties file for the config details
 
-env = stage_mini
+env = local
 
 stage_mini.domain = http://ec2-52-74-141-170.ap-southeast-1.compute.amazonaws.com:8080/gs-rest-service-0.1.0
 
